--- a/src/components/about/index.html
+++ b/src/components/about/index.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name</title>
-    <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="./src/css/index.css">
+    <script src="src/Js/index.js"></script>
 </head>
 <body>
     <header>
-        <nav>
-          <ul>
-            <li><a href="../../../index.html">Home</a></li>
-            <li><a href="../packs/index.html">Carrinho</a></li>
-            <li><a href="../about/index.html">About</a></li>
-            <li><a href="../coments/index.html">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="menu-toggle">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-      </header>
+		<nav>
+			<ul>
+				<li><a href="./index.html">Home</a></li>
+                <li><a href="./src/components/packs/index.html">Carrinho</a></li>
+                <li><a href="./src/components/about/index.html">About</a></li>
+                <li><a href="./src/components/coments/index.html">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+      
     <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non unde perspiciatis optio debitis exercitationem quo laudantium praesentium, temporibus quas vitae, hic labore officia, sint expedita velit repellat ex repudiandae sed.</p>
+        <div id="main">
+            <ul id="main-list" class="main-list">
+                <li id="img-products"><img src="" alt="Carregando"></img></li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
