--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,22 @@ body {
 	color: #333;
 }
 
+.swiper-container {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 20px;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: transparent;
+}
+.swiper-slide img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
 header {
   
 	background-color: #fd9af5;
